--- a/package.json
+++ b/package.json
@@ -18,9 +18,20 @@
   "author": "Denys Provodnikov <dp.wireden@gmail.com> (https://madappgang.com)",
   "license": "MIT",
   "dependencies": {
+    "react": "^16.8.6"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "babel-preset-minify": "^0.5.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dprovodnikov/useToggle.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dprovodnikov/useToggle/issues"
+  },
+  "homepage": "https://github.com/dprovodnikov/useToggle#readme"
 }
