--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dprovodnikov/use-toggle",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A react hook containing basic toggle behaviour",
   "main": "dist/index.js",
   "scripts": {
@@ -23,8 +23,7 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "babel-preset-minify": "^0.5.0"
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4"
   },
   "repository": {
     "type": "git",
